--- a/src/main/protobuf/BUILD
+++ b/src/main/protobuf/BUILD
@@ -19,7 +19,6 @@ FILES = [
     "extra_actions_base",
     "invocation_policy",
     "java_compilation",
-    "spawn",
     "test_status",
     "worker_protocol",
 ]
@@ -258,6 +257,24 @@ java_proto_library(
 java_library_srcs(
     name = "remote_execution_log_java_proto_srcs",
     deps = [":remote_execution_log_java_proto"],
+)
+
+proto_library(
+    name = "spawn_proto",
+    srcs = ["spawn.proto"],
+    deps = [
+        "@com_google_protobuf//:duration_proto",
+    ],
+)
+
+java_proto_library(
+    name = "spawn_java_proto",
+    deps = [":spawn_proto"],
+)
+
+java_library_srcs(
+    name = "spawn_java_proto_srcs",
+    deps = [":spawn_java_proto"],
 )
 
 proto_library(
