Remove Override from BranchDetailAnalyzer and disable jacocoagent and java_tools tests.
Related to #11674

--- a/src/test/shell/bazel/BUILD
+++ b/src/test/shell/bazel/BUILD
@@ -508,7 +508,8 @@ sh_test(
             "//src/test/shell/bazel/testdata:jdk_http_archives_filegroup",
             "//tools/test/CoverageOutputGenerator/java/com/google/devtools/coverageoutputgenerator:coverage_output_generator_repo",
         ],
-        tags = ["no_windows"],
+        # TODO(#11674) reenable after the upgrade
+        tags = ["no_windows", "manual"],
     )
     for java_version in JAVA_VERSIONS
 ]
