--- a/src/test/shell/bazel/BUILD
+++ b/src/test/shell/bazel/BUILD
@@ -508,11 +508,7 @@ sh_test(
             "//src/test/shell/bazel/testdata:jdk_http_archives_filegroup",
             "//tools/test/CoverageOutputGenerator/java/com/google/devtools/coverageoutputgenerator:coverage_output_generator_repo",
         ],
-        # TODO(#11674) reenable after the upgrade
-        tags = [
-            "manual",
-            "no_windows",
-        ],
+        tags = ["no_windows"],
     )
     for java_version in JAVA_VERSIONS
 ]
