Move exec group tests out of platforms_test and into integration.
PiperOrigin-RevId: 372383546

--- a/src/test/shell/integration/BUILD
+++ b/src/test/shell/integration/BUILD
@@ -770,6 +770,15 @@ sh_test(
     ],
 )
 
+sh_test(
+    name = "exec_group_test",
+    srcs = ["exec_group_test.sh"],
+    data = [
+        ":test-deps",
+        "@bazel_tools//tools/bash/runfiles",
+    ],
+)
+
 ########################################################################
 # Test suites.
 
