Delete unused stdredirect dylib
This stopped being used in this commit
https://github.com/bazelbuild/rules_apple/commit/79dbaba43d5f6e4b655c9196ec2b045b410917b5
when Xcode's simctl introduced the `--console-pty` flag. This requires
this rules change https://github.com/bazelbuild/rules_apple/pull/1152

--- a/src/BUILD
+++ b/src/BUILD
@@ -59,7 +59,6 @@ genquery(
 # Linux.
 OSX_DUMMY_TARGETS = [
     "src/tools/xcode/realpath/realpath",
-    "src/tools/xcode/stdredirect/StdRedirect.dylib",
 ]
 
 [
@@ -75,12 +74,9 @@ OSX_DUMMY_TARGETS = [
 filegroup(
     name = "darwin_tools",
     srcs = [
-        "//src/tools/xcode/realpath:realpath",
+        "//src/tools/xcode/realpath",
         "//tools/osx:xcode_locator.m",
-    ] + select({
-        "//src/conditions:iphonesdk": ["//src/tools/xcode/stdredirect:StdRedirect.dylib"],
-        "//conditions:default": [":dummy_darwin_tool_src_tools_xcode_stdredirect_StdRedirect.dylib"],
-    }),
+    ],
 )
 
 filegroup(
@@ -495,7 +491,6 @@ filegroup(
         "//src/tools/starlark/java/com/google/devtools/starlark/common:srcs",
         "//src/tools/xcode/realpath:srcs",
         "//src/tools/singlejar:srcs",
-        "//src/tools/xcode/stdredirect:srcs",
         "//src/tools/remote:srcs",
         "//tools/osx:srcs",
     ],
