--- a/.bazelrc
+++ b/.bazelrc
@@ -1,7 +1,7 @@
 common --enable_platform_specific_config
 
 # Shared configuration flags to build and test Bazel on RBE.
-build:remote_shared --define=EXECUTOR=remote
+build:remote_shared --incompatible_strict_action_env=true
 build:remote_shared --remote_instance_name=projects/bazel-untrusted/instances/default_instance
 build:remote_shared --remote_executor=grpcs://remotebuildexecution.googleapis.com
 build:remote_shared --remote_timeout=600
@@ -15,9 +15,9 @@ build:remote_shared --tool_java_runtime_version=rbe_jdk
 build:remote_shared --noexperimental_check_desugar_deps
 
 # Configuration to build and test Bazel on RBE on Ubuntu 18.04 with Java 11
-build:ubuntu1804_java11 --extra_toolchains=@rbe_ubuntu1804_java11//java:all
-build:ubuntu1804_java11 --crosstool_top=@rbe_ubuntu1804_java11//cc:toolchain
-build:ubuntu1804_java11 --extra_toolchains=@rbe_ubuntu1804_java11//config:cc-toolchain
+build:ubuntu1804_java11 --extra_toolchains=//configs/rbe/rbe_ubuntu1804_java11/java:all
+build:ubuntu1804_java11 --extra_toolchains=//configs/rbe/rbe_ubuntu1804_java11/config:cc-toolchain
+build:ubuntu1804_java11 --crosstool_top=//configs/rbe/rbe_ubuntu1804_java11/cc:toolchain
 build:ubuntu1804_java11 --extra_execution_platforms=//:rbe_ubuntu1804_java11_platform
 build:ubuntu1804_java11 --extra_execution_platforms=//:rbe_ubuntu1804_java11_highcpu_platform
 build:ubuntu1804_java11 --host_platform=//:rbe_ubuntu1804_java11_platform
@@ -25,24 +25,14 @@ build:ubuntu1804_java11 --platforms=//:rbe_ubuntu1804_java11_platform
 build:ubuntu1804_java11 --config=remote_shared
 
 # Configuration to build and test Bazel on RBE on Ubuntu 16.04 with Java 8
-build:ubuntu1604_java8 --extra_toolchains=@rbe_ubuntu1604_java8//java:all
-build:ubuntu1604_java8 --crosstool_top=@rbe_ubuntu1604_java8//cc:toolchain
-build:ubuntu1604_java8 --extra_toolchains=@rbe_ubuntu1604_java8//config:cc-toolchain
+build:ubuntu1604_java8 --extra_toolchains=//configs/rbe/rbe_ubuntu1604_java8/java:all
+build:ubuntu1604_java8 --crosstool_top=//configs/rbe/rbe_ubuntu1604_java8/cc:toolchain
+build:ubuntu1604_java8 --extra_toolchains=//configs/rbe/rbe_ubuntu1604_java8/config:cc-toolchain
 build:ubuntu1604_java8 --extra_execution_platforms=//:rbe_ubuntu1604_java8_platform
 build:ubuntu1604_java8 --extra_execution_platforms=//:rbe_ubuntu1604_java8_highcpu_platform
 build:ubuntu1604_java8 --host_platform=//:rbe_ubuntu1604_java8_platform
 build:ubuntu1604_java8 --platforms=//:rbe_ubuntu1604_java8_platform
 build:ubuntu1604_java8 --config=remote_shared
-
-#TODO(ilist): remove once Bazel version on RBE is > 4.0.0
-build:ubuntu1804_java11 --host_javabase=@rbe_ubuntu1804_java11//java:jdk
-build:ubuntu1804_java11 --javabase=@rbe_ubuntu1804_java11//java:jdk
-build:ubuntu1804_java11 --host_java_toolchain=@bazel_tools//tools/jdk:toolchain_java9
-build:ubuntu1804_java11 --java_toolchain=@bazel_tools//tools/jdk:toolchain_java9
-build:ubuntu1604_java8 --host_javabase=@rbe_ubuntu1604_java8//java:jdk
-build:ubuntu1604_java8 --javabase=@rbe_ubuntu1604_java8//java:jdk
-build:ubuntu1604_java8 --host_java_toolchain=@bazel_tools//tools/jdk:toolchain_hostjdk8
-build:ubuntu1604_java8 --java_toolchain=@bazel_tools//tools/jdk:toolchain_hostjdk8
 
 # Alias
 build:remote --config=ubuntu1604_java8
