--- a/configs/rbe/BUILD
+++ b/configs/rbe/BUILD
@@ -1,8 +1,8 @@
-# Scripts for generating rbe configs
-package(default_visibility = ["//visibility:private"])
-
 filegroup(
     name = "srcs",
-    srcs = glob(["**"]),
-    visibility = ["//scripts:__pkg__"],
+    srcs = glob(["*"]) + [
+        "//configs/rbe/rbe_ubuntu1604_java8:srcs",
+        "//configs/rbe/rbe_ubuntu1804_java11:srcs",
+    ],
+    visibility = ["//configs:__pkg__"],
 )
