--- a/configs/rbe/rbe_ubuntu1604_java8/config/BUILD
+++ b/configs/rbe/rbe_ubuntu1604_java8/config/BUILD
@@ -46,3 +46,8 @@ platform(
         "OSFamily": "Linux",
     },
 )
+filegroup(
+    name = "srcs",
+    srcs = glob(["**"]),
+    visibility = ["//configs/rbe:__subpackages__"],
+)
