--- a/configs/rbe/rbe_ubuntu1804_java11/cc/BUILD
+++ b/configs/rbe/rbe_ubuntu1804_java11/cc/BUILD
@@ -47,7 +47,7 @@ filegroup(
 cc_toolchain_suite(
     name = "toolchain",
     toolchains = {
-        "k8|clang": ":cc-compiler-k8",
+        "k8|gcc": ":cc-compiler-k8",
         "k8": ":cc-compiler-k8",
         "armeabi-v7a|compiler": ":cc-compiler-armeabi-v7a",
         "armeabi-v7a": ":cc-compiler-armeabi-v7a",
@@ -67,34 +67,32 @@ cc_toolchain(
     objcopy_files = ":empty",
     strip_files = ":empty",
     supports_param_files = 1,
-    module_map = ":module.modulemap",
+    module_map = None,
 )
 
 cc_toolchain_config(
     name = "linux_gnu_x86",
     cpu = "k8",
-    compiler = "clang",
+    compiler = "gcc",
     toolchain_identifier = "linux_gnu_x86",
     host_system_name = "i686-unknown-linux-gnu",
     target_system_name = "x86_64-unknown-linux-gnu",
     target_libc = "glibc_2.19",
-    abi_version = "clang",
+    abi_version = "gcc",
     abi_libc_version = "glibc_2.19",
-    cxx_builtin_include_directories = ["/usr/local/include",
-    "/usr/lib/llvm-6.0/lib/clang/6.0.0/include",
+    cxx_builtin_include_directories = ["/usr/lib/gcc/x86_64-linux-gnu/7/include",
+    "/usr/local/include",
+    "/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed",
     "/usr/include/x86_64-linux-gnu",
     "/usr/include",
-    "/usr/lib/llvm-6.0/lib/clang/6.0.0/share",
-    "/usr/include/c++/7.5.0",
-    "/usr/include/x86_64-linux-gnu/c++/7.5.0",
-    "/usr/include/c++/7.5.0/backward",
-    "/usr/include/clang/6.0.0/include",
-    "/usr/lib/clang/6.0.0/include"],
+    "/usr/include/c++/7",
+    "/usr/include/x86_64-linux-gnu/c++/7",
+    "/usr/include/c++/7/backward"],
     tool_paths = {"ar": "/usr/bin/ar",
         "ld": "/usr/bin/ld",
         "llvm-cov": "/usr/bin/llvm-cov",
         "cpp": "/usr/bin/cpp",
-        "gcc": "/usr/bin/clang",
+        "gcc": "/usr/bin/gcc",
         "dwp": "/usr/bin/dwp",
         "gcov": "/usr/bin/gcov",
         "nm": "/usr/bin/nm",
@@ -104,9 +102,8 @@ cc_toolchain_config(
     compile_flags = ["-U_FORTIFY_SOURCE",
     "-fstack-protector",
     "-Wall",
-    "-Wthread-safety",
-    "-Wself-assign",
-    "-fcolor-diagnostics",
+    "-Wunused-but-set-parameter",
+    "-Wno-free-nonheap-object",
     "-fno-omit-frame-pointer"],
     opt_compile_flags = ["-g0",
     "-O2",
@@ -116,14 +113,15 @@ cc_toolchain_config(
     "-fdata-sections"],
     dbg_compile_flags = ["-g"],
     cxx_flags = ["-std=c++0x"],
-    link_flags = ["-fuse-ld=/usr/bin/ld.gold",
+    link_flags = ["-fuse-ld=gold",
     "-Wl,-no-as-needed",
     "-Wl,-z,relro,-z,now",
-    "-B/usr/bin"],
+    "-B/usr/bin",
+    "-pass-exit-codes"],
     link_libs = ["-lstdc++",
     "-lm"],
     opt_link_flags = ["-Wl,--gc-sections"],
-    unfiltered_compile_flags = ["-no-canonical-prefixes",
+    unfiltered_compile_flags = ["-fno-canonical-system-headers",
     "-Wno-builtin-macro-redefined",
     "-D__DATE__=\"redacted\"",
     "-D__TIMESTAMP__=\"redacted\"",
