Add support for cpu profiler

--- a/src/main/java/net/starlark/java/eval/BUILD
+++ b/src/main/java/net/starlark/java/eval/BUILD
@@ -96,7 +96,7 @@ cc_binary(
     srcs = select({
         "//src/conditions:darwin": ["cpu_profiler_posix.cc"],
         "//src/conditions:linux": ["cpu_profiler_posix.cc"],
-        "//conditions:default": ["cpu_profiler_unimpl.cc"],
+        "//conditions:default": ["cpu_profiler_windows.cc"],
     }),
     linkshared = 1,
     deps = ["@bazel_tools//tools/jdk:jni"],
