Add proto_toolchain rule
Progress on https://docs.google.com/document/d/1go3UMwm2nM8JHhI3MZrtyoFEy3BYg5omGqQmOwcjmNE/edit

--- a/src/test/shell/bazel/BUILD
+++ b/src/test/shell/bazel/BUILD
@@ -8,6 +8,7 @@ filegroup(
         "//src/test/shell/bazel/android:srcs",
         "//src/test/shell/bazel/apple:srcs",
         "//src/test/shell/bazel/remote:srcs",
+        "//src/test/shell/bazel/proto:srcs",
         "//src/test/shell/bazel/testdata:srcs",
         "//tools/aquery_differ:srcs",
     ],
