--- a/tools/BUILD
+++ b/tools/BUILD
@@ -18,6 +18,7 @@ filegroup(
         "//tools/launcher:srcs",
         "//tools/def_parser:srcs",
         "//tools/platforms:srcs",
+        "//tools/proto:srcs",
         "//tools/genrule:srcs",
         "//tools/cpp:srcs",
         "//tools/j2objc:srcs",
@@ -56,6 +57,7 @@ filegroup(
         "//tools/launcher:srcs",
         "//tools/def_parser:srcs",
         "//tools/platforms:srcs",
+        "//tools/proto:srcs",
         "//tools/objc:srcs",
         "//tools/python:embedded_tools",
         "//tools/runfiles:embedded_tools",
