Try fix test_bzl_srcs

--- a/tools/proto/BUILD
+++ b/tools/proto/BUILD
@@ -7,3 +7,13 @@ filegroup(
         "//tools:__pkg__",
     ],
 )
+
+filegroup(
+    name = "bzl_srcs",
+    srcs = glob(["*.bzl"]) + [
+        "//tools/proto/private:bzl_srcs",
+    ],
+    visibility = [
+        "//tools:__pkg__",
+    ],
+)
