--- a/tools/proto/private/BUILD
+++ b/tools/proto/private/BUILD
@@ -7,3 +7,13 @@ filegroup(
         "//tools/proto:__pkg__",
     ],
 )
+
+filegroup(
+    name = "bzl_srcs",
+    srcs = glob(["*.bzl"]) + [
+        "//tools/proto/private/rules:bzl_srcs",
+    ],
+    visibility = [
+        "//tools/proto:__pkg__",
+    ],
+)
