--- a/tools/proto/private/rules/BUILD
+++ b/tools/proto/private/rules/BUILD
@@ -5,3 +5,11 @@ filegroup(
         "//tools/proto/private:__pkg__",
     ],
 )
+
+filegroup(
+    name = "bzl_srcs",
+    srcs = glob(["*.bzl"]),
+    visibility = [
+        "//tools/proto/private:__pkg__",
+    ],
+)
