--- a/src/test/shell/bazel/BUILD
+++ b/src/test/shell/bazel/BUILD
@@ -555,6 +555,15 @@ sh_test(
 )
 
 sh_test(
+    name = "bazel_coverage_starlark_test",
+    srcs = ["bazel_coverage_starlark_test.sh"],
+    data = [":test-deps"],
+    tags = [
+        "no_windows",
+    ],
+)
+
+sh_test(
     name = "bazel_thinlto_test",
     srcs = ["bazel_thinlto_test.sh"],
     data = [":test-deps"],
