--- a/src/BUILD
+++ b/src/BUILD
@@ -657,6 +657,10 @@ filegroup(
         "@openjdk16_darwin_archive//:WORKSPACE",
         "@openjdk16_linux_archive//:WORKSPACE",
         "@openjdk16_windows_archive//:WORKSPACE",
+        "@openjdk17_darwin_aarch64_archive//:WORKSPACE",
+        "@openjdk17_darwin_archive//:WORKSPACE",
+        "@openjdk17_linux_archive//:WORKSPACE",
+        "@openjdk17_windows_archive//:WORKSPACE",
         "@openjdk_linux_aarch64_minimal//file",
         "@openjdk_linux_minimal//file",
         "@openjdk_macos_aarch64_minimal//file",
@@ -686,6 +690,10 @@ filegroup(
         "@remotejdk16_macos_aarch64_for_testing//:WORKSPACE",
         "@remotejdk16_macos_for_testing//:WORKSPACE",
         "@remotejdk16_win_for_testing//:WORKSPACE",
+        "@remotejdk17_linux_for_testing//:WORKSPACE",
+        "@remotejdk17_macos_aarch64_for_testing//:WORKSPACE",
+        "@remotejdk17_macos_for_testing//:WORKSPACE",
+        "@remotejdk17_win_for_testing//:WORKSPACE",
         "@rules_cc//:WORKSPACE",
         "@rules_java//:WORKSPACE",
         "@rules_pkg//:WORKSPACE",
