--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -65,3 +65,12 @@ android/ @ahumesky
 /tools/test/collect_coverage.sh @lberki
 /tools/test/collect_cc_coverage.sh @lberki
 /tools/test/CoverageOutputGenerator/ @lberki
+
+# Remote Execution
+
+/src/main/java/com/google/devtools/build/lib/remote @bazelbuild/remote-execution
+/src/test/java/com/google/devtools/build/lib/remote @bazelbuild/remote-execution
+/src/test/py/bazel/remote @bazelbuild/remote-execution
+/src/test/shell/bazel/remote @bazelbuild/remote-execution
+/src/tools/remote @bazelbuild/remote-execution
+/third_party/remoteapis/build/bazel/remote @bazelbuild/remote-execution
