--- a/.bazelci/build_bazel_binaries.yml
+++ b/.bazelci/build_bazel_binaries.yml
@@ -49,3 +49,13 @@ platforms:
     build_targets:
       - "//src:bazel.exe"
       - "//src:bazel_nojdk.exe"
+  windows_arm64:
+    build_flags:
+      - "--copt=-w"
+      - "--host_copt=-w"
+      - "-c"
+      - "opt"
+    build_targets:
+      - "//src:bazel.exe"
+      - "//src:bazel_nojdk.exe"
+      - "--cpu=arm64_windows"
