--- a/tools/BUILD
+++ b/tools/BUILD
@@ -55,6 +55,7 @@ filegroup(
         "//tools/jdk:srcs",
         "//tools/launcher:srcs",
         "//tools/def_parser:srcs",
+        "//tools/windows:srcs",
         "//tools/platforms:srcs",
         "//tools/objc:srcs",
         "//tools/python:embedded_tools",
@@ -80,6 +81,7 @@ filegroup(
         "//tools/cpp:bzl_srcs",
         "//tools/jdk:bzl_srcs",
         "//tools/osx:bzl_srcs",
+        "//tools/windows:bzl_srcs",
         "//tools/python:bzl_srcs",
         "//tools/sh:bzl_srcs",
     ],
