--- a/src/main/starlark/tests/builtins_bzl/BUILD
+++ b/src/main/starlark/tests/builtins_bzl/BUILD
@@ -21,6 +21,7 @@ sh_test(
         ":builtin_test_setup",
         ":cc_builtin_test_files",
         "//src/test/shell/bazel:test-deps",
+    	"@bazel_tools//tools/bash/runfiles",
     ],
     tags = ["no_windows"],
 )
