--- a/.bazelci/build_bazel_binaries.yml
+++ b/.bazelci/build_bazel_binaries.yml
@@ -55,7 +55,7 @@ platforms:
       - "--host_copt=-w"
       - "-c"
       - "opt"
+      - "--cpu=x64_arm64_windows"
     build_targets:
       - "//src:bazel.exe"
       - "//src:bazel_nojdk.exe"
-      - "--cpu=arm64_windows"
