[windows/arm64] Add missing JDK toolchain for java build
Extend configurations to add JDK 11 and 17 for windows/arm64 platforms.

This should fix the Java builds on windows/arm64

Closes #14700.

PiperOrigin-RevId: 427737536

--- a/src/BUILD
+++ b/src/BUILD
@@ -655,6 +655,7 @@ filegroup(
         "@openjdk11_darwin_archive//:WORKSPACE",
         "@openjdk11_linux_archive//:WORKSPACE",
         "@openjdk11_windows_archive//:WORKSPACE",
+        "@openjdk11_windows_arm64_archive//:WORKSPACE",
         "@openjdk15_darwin_aarch64_archive//:WORKSPACE",
         "@openjdk15_darwin_archive//:WORKSPACE",
         "@openjdk15_linux_archive//:WORKSPACE",
@@ -667,6 +668,7 @@ filegroup(
         "@openjdk17_darwin_archive//:WORKSPACE",
         "@openjdk17_linux_archive//:WORKSPACE",
         "@openjdk17_windows_archive//:WORKSPACE",
+        "@openjdk17_windows_arm64_archive//:WORKSPACE",
         "@openjdk_linux_aarch64_minimal//file",
         "@openjdk_linux_minimal//file",
         "@openjdk_macos_aarch64_minimal//file",
@@ -687,6 +689,7 @@ filegroup(
         "@remotejdk11_linux_s390x_for_testing//:WORKSPACE",
         "@remotejdk11_macos_aarch64_for_testing//:WORKSPACE",
         "@remotejdk11_macos_for_testing//:WORKSPACE",
+        "@remotejdk11_win_arm64_for_testing//:WORKSPACE",
         "@remotejdk11_win_for_testing//:WORKSPACE",
         "@remotejdk15_linux_for_testing//:WORKSPACE",
         "@remotejdk15_macos_aarch64_for_testing//:WORKSPACE",
@@ -699,6 +702,7 @@ filegroup(
         "@remotejdk17_linux_for_testing//:WORKSPACE",
         "@remotejdk17_macos_aarch64_for_testing//:WORKSPACE",
         "@remotejdk17_macos_for_testing//:WORKSPACE",
+        "@remotejdk17_win_arm64_for_testing//:WORKSPACE",
         "@remotejdk17_win_for_testing//:WORKSPACE",
         "@rules_cc//:WORKSPACE",
         "@rules_java//:WORKSPACE",
