--- a/site/_config.yml
+++ b/site/_config.yml
@@ -16,7 +16,7 @@ gems:
 url: "https://docs.bazel.build" # used by jekyll-sitemap
 
 # Update this to the newest release for the default docs.bazel.build version.
-version: "5.0.0"
+version: "main"
 
 # This must be kept in sync with //scripts/docs:doc_versions.bzl
 doc_versions:
