--- a/src/BUILD
+++ b/src/BUILD
@@ -663,6 +663,7 @@ filegroup(
         "@openjdk18_darwin_archive//:WORKSPACE",
         "@openjdk18_linux_archive//:WORKSPACE",
         "@openjdk18_windows_archive//:WORKSPACE",
+        "@openjdk18_windows_arm64_archive//:WORKSPACE",
         "@openjdk_linux_aarch64_minimal//file",
         "@openjdk_linux_minimal//file",
         "@openjdk_macos_aarch64_minimal//file",
@@ -693,6 +694,7 @@ filegroup(
         "@remotejdk18_linux_for_testing//:WORKSPACE",
         "@remotejdk18_macos_aarch64_for_testing//:WORKSPACE",
         "@remotejdk18_macos_for_testing//:WORKSPACE",
+        "@remotejdk18_win_arm64_for_testing//:WORKSPACE",
         "@remotejdk18_win_for_testing//:WORKSPACE",
         "@rules_cc//:WORKSPACE",
         "@rules_java//:WORKSPACE",
