feat: sort key helper

--- a/src/main/java/net/starlark/java/eval/BUILD
+++ b/src/main/java/net/starlark/java/eval/BUILD
@@ -35,6 +35,7 @@ java_library(
         "Printer.java",
         "RangeList.java",
         "Sequence.java",
+        "SortKeyHelper.java",
         "Starlark.java",
         "StarlarkCallable.java",
         "StarlarkFloat.java",
